--- a/css/slyle.css
+++ b/css/slyle.css
@@ -55,7 +55,9 @@ a{
 }
 
 .site-nav a:hover, 
-.site-nav a:focus {
+.site-nav a:focus,
+.contact a:hover,
+.contact a:focus {
     color: var(--accent-text-color);
 }
 
@@ -65,11 +67,6 @@ a{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-}
-
-.contact a:hover,
-.contact a:focus {
-    color: var(--accent-text-color);
 }
 
 .section-title{
