--- a/css/slyle.css
+++ b/css/slyle.css
@@ -42,6 +42,20 @@ a{
     margin: 0px;
 }
 
+.conteiner{
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.visually-hidden{
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    margin: 0px;
+}
+
 .logo{
     color: var(--accent-text-color);
     font-family: Raleway,sans-serif;
@@ -58,7 +72,36 @@ a{
     color: white;
 }
 
+.head{
+   margin-right: 93px;
+}
+
+.header-page{
+    padding: 25px 0px;
+}
+
+.site-nav,
+.header-page .conteiner,
+.way{
+    display: flex;
+    align-items: center;
+}
+
+.site-nav .items,
+.contact .items{
+    margin-right: 50px;
+}
+
+.site-nav .items:last-child,
+.contact .items:last-child,
+.warranty .items:last-child,
+.occupation .items:last-child,
+.team .items:last-child{
+    margin-right: 0px;
+}
+
 .site-nav a {
+    padding: 5px 5px;
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -73,8 +116,15 @@ a{
     color: var(--accent-text-color);
 }
 
+.contact{
+    display: flex;
+    margin-left: auto;
+}
+
 .contact a {
     width: 135px;
+    padding: 5px 5px;
+
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -84,22 +134,12 @@ a{
 
 .section-title{
     margin: 0px;
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-}
-
-.header-page{
-    padding: 32px 215px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.site-nav,
-.contact{
-    display: flex;
 }
 
 .hero{
@@ -110,8 +150,11 @@ a{
 
 .hero-title{
     max-width: 696px;
-    padding-bottom: 22px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 22px;
+    
     color: #FFFFFF;
     font-weight: 900;
     font-size: 44px;
@@ -127,6 +170,7 @@ a{
     margin: 0 auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+
     color:#FFFFFF;
     background-color: var(--accent-text-color);
     font-family: Roboto,sans-serif;
@@ -137,26 +181,31 @@ a{
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
+    cursor:pointer;
 }
 
-.warranty{
-    padding: 94px 215px;
+.warranty,
+.team .conteiner {
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
-.warranty ul{
+.warranty .list,
+.occupation .list,
+.team .list{
     display: flex;
-    justify-content: space-between;
+    
 }
 
-.warranty li{
-    display: inline-block;
-    text-align: left;
+.warranty .items{
     width: 270px;
-    height: 101px;
+    margin-right: 30px;
 }
 
 .warranty-plan{
-    margin: 0px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
@@ -166,41 +215,31 @@ a{
 
 .warranty-text{
     margin: 0px;
-    padding-top: 10px;
     font-size: 14px;
     line-height: 1.71;
 }
-
-.occupation{
-    padding: 0px 215px 94px;
+.occupation .conteiner{
+    padding-bottom: 94px;
 }
 
-.occupation .section-title{
-    padding-bottom: 50px;
+.occupation .section-title,
+.team .section-title {
+    margin-bottom: 50px;
 }
 
-.occupation ul{
-     display: flex;
-     justify-content: space-between;
+.occupation .items{
+    margin-right: 30px;
+    line-height: 0px;
 }
 
 .team{
-    padding: 94px 215px;
     background-color:var(--background-light-color);
 }
 
-.team .section-title{
-    padding-bottom: 50px;
-}
-
-.team ul{
-    display: flex;
-    justify-content: space-between;
-}
-
-.team li{
-    display: inline-block;
+.team .items{
     width: 270px;
+    margin-right: 30px;
+    line-height: 0px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -208,8 +247,9 @@ a{
 }
 
 .team-name{
-    margin: 0px;
-    padding-top: 30px;
+    margin-top: 30px;
+    margin-bottom: 0px;
+
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 16px;
@@ -218,8 +258,8 @@ a{
 }
 
 .team-proff{
-    margin: 0px;
-    padding: 10px 0px 30px;
+    margin: 10px 0px 30px;
+
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -228,9 +268,14 @@ a{
 /* Footer*/
 
 .footer{
-    padding: 60px 215px;
     background-color: var(--background-hero-color);
 }
+
+.footer .conteiner{
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
 .address{
     margin-top: 20px;
 }
@@ -238,6 +283,7 @@ a{
 .address a{
     display: inline-block;
     margin-top: 9px;
+
     color: rgba(255, 255, 255, 0.6);
     font-family: Roboto,sans-serif;
     font-style: normal;
@@ -253,6 +299,9 @@ a.connection{
 /* button */
 
 .button{
+    border-radius: 4px;
+    border-color: transparent;
+
     color: var(--title-text-color);
     background-color: var(--background-light-color);
     font-weight: 500;
@@ -263,8 +312,8 @@ a.connection{
 
 .button:hover,
 .button:focus{
-    color: white;
-    background-color: var(--accent-text-color);
+    border-color: var(--accent-text-color);
+    cursor:pointer;
 }
 
 .progect-text{
@@ -279,4 +328,46 @@ a.connection{
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+}
+
+/*portfolio*/
+
+.filter{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.filter-list{
+    list-style: none;
+    margin-top: 0px;
+    margin-bottom: 50px;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.filter-list .items{
+    margin-right: 8px;
+}
+
+.list-project{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+    margin-top: 0px;
+    margin-left: 0px;
+    padding: 0px;
+    list-style: none;
+}
+
+.list-project .items{
+    display: block;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: 370px;
+    line-height: 0px;
+    background-color: var(--background-main-color);
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
 }
