--- a/css/slyle.css
+++ b/css/slyle.css
@@ -24,7 +24,6 @@ html{
 }
 
 body{
-    max-width: 1600px;
     background-color:var(--background-main-color);
     color: var(--primary-text-color);
     font-family: Roboto,sans-serif;
@@ -36,7 +35,9 @@ a{
   text-decoration: none;
 }
 
-.list{
+.list,
+.filter-list,
+.list-project{
     list-style: none;
     padding: 0px;
     margin: 0px;
@@ -51,7 +52,7 @@ a{
 }
 
 .visually-hidden{
-    position: absolute !important;
+    position: absolute;
     clip: rect(1px 1px 1px 1px);
     margin: 0px;
 }
@@ -167,6 +168,7 @@ a{
 .hero-link{
     padding: 10px 32px;
     min-width: 200px;
+    outline: none;
     margin: 0 auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -299,6 +301,7 @@ a.connection{
 /* button */
 
 .button{
+    padding: 6px 22px;
     border-radius: 4px;
     border-color: transparent;
 
@@ -308,46 +311,38 @@ a.connection{
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
+    letter-spacing: 0.03em;
 }
 
 .button:hover,
 .button:focus{
-    border-color: var(--accent-text-color);
+    color:white;
+    outline: none;
+    background-color: var(--accent-text-color);
     cursor:pointer;
-}
-
-.progect-text{
-    color: var(--primary-text-color);
-    font-size: 16px;
-    line-height: 1.88;
-}
-
-.progect-title{
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
 }
 
 /*portfolio*/
 
-.filter{
+.filter {
     padding-top: 94px;
     padding-bottom: 94px;
+    border-top: 1px solid #ECECEC;
 }
 
-.filter-list{
-    list-style: none;
+.filter-list {
     margin-top: 0px;
     margin-bottom: 50px;
-    padding: 0px;
     display: flex;
     justify-content: center;
 }
 
-.filter-list .items{
+.filter-list .items {
     margin-right: 8px;
+}
+
+.filter-list .items:nth-last-child(-n+1){
+    margin-right: 0px;
 }
 
 .list-project{
@@ -357,17 +352,46 @@ a.connection{
     margin-bottom: -30px;
     margin-top: 0px;
     margin-left: 0px;
-    padding: 0px;
-    list-style: none;
 }
 
-.list-project .items{
+.items-project {
     display: block;
     margin-right: 30px;
     margin-bottom: 30px;
-    width: 370px;
+    width: 372px;
+
     line-height: 0px;
     background-color: var(--background-main-color);
     border: 1px solid #EEEEEE;
     box-sizing: border-box;
+}
+
+.items-project:nth-child(3n){
+    margin-right: 0px;
+}
+
+.items-project:nth-last-child(-n + 3){
+    margin-bottom: 0px;
+}
+
+.progect-title {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    padding: 0px 24px;
+
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.progect-text {
+    margin-top: 4px;
+    margin-bottom: 20px;
+    padding: 0px 24px;
+
+    color: var(--primary-text-color);
+    font-size: 16px;
+    line-height: 1.88;
 }
