--- a/css/slyle.css
+++ b/css/slyle.css
@@ -366,6 +366,13 @@ a.connection{
     box-sizing: border-box;
 }
 
+.items-project:hover,
+.items-project:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+                0px 4px 4px rgba(0, 0, 0, 0.06), 
+                1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .items-project:nth-child(3n){
     margin-right: 0px;
 }
