--- a/css/slyle.css
+++ b/css/slyle.css
@@ -58,6 +58,7 @@ a{
 }
 
 .logo{
+    padding: 24px 0px;
     color: var(--accent-text-color);
     font-family: Raleway,sans-serif;
     font-weight: 700;
@@ -69,16 +70,12 @@ a{
     color:#000000; 
 }
 
-.logo .studio{
+.logo .studio {
     color: white;
 }
 
 .head{
    margin-right: 93px;
-}
-
-.header-page{
-    padding: 25px 0px;
 }
 
 .site-nav,
@@ -91,6 +88,7 @@ a{
 .site-nav .items,
 .contact .items{
     margin-right: 50px;
+    padding: 32px 0px;
 }
 
 .site-nav .items:last-child,
@@ -150,7 +148,6 @@ a{
 }
 
 .hero-title{
-    max-width: 696px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
@@ -172,6 +169,7 @@ a{
     margin: 0 auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border-color: transparent;
 
     color:#FFFFFF;
     background-color: var(--accent-text-color);
@@ -250,7 +248,7 @@ a{
 
 .team-name{
     margin-top: 30px;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 
     color: var(--title-text-color);
     font-weight: 500;
@@ -260,7 +258,8 @@ a{
 }
 
 .team-proff{
-    margin: 10px 0px 30px;
+    padding-bottom: 30px;
+    margin: 0px;
 
     font-size: 16px;
     line-height: 1.19;
@@ -323,6 +322,10 @@ a.connection{
 }
 
 /*portfolio*/
+
+.activ-page{
+    color: var(--accent-text-color);
+}
 
 .filter {
     padding-top: 94px;
@@ -395,8 +398,9 @@ a.connection{
 
 .progect-text {
     margin-top: 4px;
-    margin-bottom: 20px;
-    padding: 0px 24px;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 
     color: var(--primary-text-color);
     font-size: 16px;
